[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Stephen Cunningham <stephen.cunningham@researchgate.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
